cp project/force-app/main/default/objects/CP_Portal_Setting__mdt/CP_Portal_Setting__mdt.object-meta.xml
<CustomObject>
    <label>CP Portal Setting</label>
    <pluralLabel>CP Portal Settings</pluralLabel>
</CustomObject>