cp project/force-app/main/default/objects/CP_Portal_Setting__mdt/fields/Commission_Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Commission_Approval_Threshold__c</fullName>
    <defaultValue>500000.0</defaultValue>
    <label>Commission Approval Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>