cp project/force-app/main/default/objects/CP_Portal_Setting__mdt/fields/Default_Protection_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Protection_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Default Protection Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>