cp project/force-app/main/default/objects/CP_Portal_Setting__mdt/fields/Enable_Odoo_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_Odoo_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Odoo Sync</label>
    <type>Checkbox</type>
</CustomField>