cp project/force-app/main/default/objects/CP_Portal_Setting__mdt/fields/Max_Protection_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Protection_Days__c</fullName>
    <defaultValue>180</defaultValue>
    <label>Max Protection Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>