cp project/force-app/main/default/objects/CP_Portal_Setting__mdt/fields/Odoo_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Base_URL__c</fullName>
    <label>Odoo Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>