cp project/force-app/main/default/objects/CP_Portal_Setting__mdt/fields/Odoo_Database__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Database__c</fullName>
    <label>Odoo Database</label>
    <length>100</length>
    <type>Text</type>
</CustomField>